# shadowgate-mcp

./: .dockerignore  .env.example  .gitignore  AI_HANDOFF.md  DEPLOY_RAILWAY.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  shadowgate_policy.json  smithery.yaml
discovery/: agent_routing_policy.json  client_connection_examples.json  mcp_registry_submission.md  registry_listing.md  shadowgate_manifest.json
docs/: AGENT_USAGE.md  CLIENT_CONFIGS.md  CONNECT.md  HOSTED_DEMO.md  PASSIVE_PLATFORMS.md  PAYMENT_XPAY.md  PRICING_MODEL.md  PUBLISHING.md  SECURITY_MODEL.md  TOOL_SURFACE.md
examples/: agent_to_agent_demo.py  client_payloads.json  malicious_samples.txt
scripts/: export_ai_context.py  package_check.py  production_check.py  public_api_check.py  release_check.py  smoke_check.py  validate_discovery.py
shadowgate/: __init__.py  audit.py  auth.py  capabilities.py  cli.py  normalizer.py  patterns.py  policy.py  ratelimit.py  registry.py  scanner.py  server.py  storage.py
tests/: conftest.py  test_phase10a_publishing_docs.py  test_phase10b_monetization_docs.py  test_phase10c_smithery_quality.py  test_phase10d_smithery_annotations.py  test_phase1_hardening.py  test_phase2_normalization.py  test_phase3_capabilities.py  test_phase4a_manifest_identity.py  test_phase4b_manifest_drift.py  test_phase4c_manifest_approval.py  test_phase5a_security_report.py  test_phase5b_adversarial_bypass.py  test_phase6a_agent_demo.py  test_phase6b_client_examples.py  test_phase7_production_hardening.py  (+4 more)
(+1 files in other folders)
